# echoform

./: .gitignore  NOTICE  README.md  config.example.txt  pyproject.toml
assets/themes/blue_gradient/: theme.json
assets/themes/neon_valley/: theme.json
examples/: config.example.txt
examples/batch/Back_To_Basics/: config.txt
examples/batch/Gonna_Get_It/: config.txt
macos/EchoformGUI/: Package.swift
macos/EchoformGUI/Sources/EchoformGUI/: ContentView.swift  EchoformGUIApp.swift  Models.swift  ProcessRunner.swift  RuntimeManager.swift
macos/EchoformGUI/Sources/EchoformGUI/Resources/Runtime/: README.md
scripts/: build_macos_runtime.sh  run_full.bat  run_full.sh  run_gui_macos.sh  run_preview.bat  run_preview.sh  run_queue_full.bat  run_queue_full.sh  run_queue_preview.bat  run_queue_preview.sh  setup_macos.sh  setup_windows.ps1
src/echoform/: __init__.py  engine.py  metadata.py  queue.py  theme.py
src/echoform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/echoform/visualizers/: __init__.py  radial_spectrum.py
